Fix errors front & back after renaming files
